netcdf-derive/tests/failing/unnamedfield.rs
#[repr(C)]
#[derive(netcdf_derive::NcType)]
struct UnnamedField(u8);

fn main() {}
